# mimic

./: .gitignore  Cargo.toml  README.md  avl_data.csv  hash_a_answer.txt  hash_b_answer.txt  hash_data.csv  maze_a_answer.txt  maze_b_answer.txt  maze_data_queue1.txt  maze_data_stack1.txt
src/: main.rs
tests/avl/: avl.c
tests/hash/: hash.c
tests/maze/: maze.c
