[package]
name = "mimic"
version = "0.1.0"
authors = ["kento tajiri <k.denjiry@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
subprocess = "0.2.4"
csv = "1.1"
serde = { version = "1", features = ["derive"] }
regex = "*"
